--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        <li><a href="./Week2/">Week 2 notes</a></li>
         <li><a href="./Week3/">Week 3 notes</a></li>
       <li><a href="./assignment1/">Assignment 1</a></li>
+       <li><a href="./assignment2/">Assignment 2</a></li>
     </ul>
   </body>
 </html>
