--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./Week3/">Week 3 notes</a></li>
       <li><a href="./assignment1/">Assignment 1</a></li>
        <li><a href="./assignment2/">Assignment 2</a></li>
+             <li><a href="Assignment3clock/">Assignment 3</a></li>
     </ul>
   </body>
 </html>
