changed read me for sped up link
added link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="./assignment1/">Assignment 1</a></li>
        <li><a href="./assignment2/">Assignment 2</a></li>
              <li><a href="Assignment3clock/">Assignment 3</a></li>
+             <li><a href="Clockcolorchange1min/">Assignment 3 sped up</a></li>
     </ul>
   </body>
 </html>
