--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
              <li><a href="Assignment3clock/">Assignment 3</a></li>
              <li><a href="Clockcolorchange1min/">Assignment 3 sped up</a></li>
              <li><a href="Assignment 4/">Assignment 4</a></li>
+             <li><a href="Assignment 5 no 1/">Assignment 5 sketch 1</a></li>
+             <li><a href="Assignment 5 no 2/">Assignment 5 sketch 2</a></li>
+             <li><a href="Assignment 5 no 3/">Assignment 5 sketch 3</a></li>
     </ul>
   </body>
 </html>
