Added to main index
Added UI final project link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="noindex">
   </head>
   <body>
-    <h1>your name and netid here</h1>
+    <hi>Ciarra Black (cab10153)</hi>
     <ul>
       <li><a href="./week1/">Week 1 notes</a></li>
        <li><a href="./Week2/">Week 2 notes</a></li>
@@ -23,6 +23,7 @@
              <li><a href="Assignment 5 no 1/">Assignment 5 sketch 1</a></li>
              <li><a href="Assignment 5 no 2/">Assignment 5 sketch 2</a></li>
              <li><a href="Assignment 5 no 3/">Assignment 5 sketch 3</a></li>
+             <li><a href="Final project UI/">Final Project UI</a></li>
     </ul>
   </body>
 </html>
